cmake_minimum_required(VERSION 3.26)
project(untitled C)

set(CMAKE_C_STANDARD 11)

add_executable(ex02 ex_02.c)
add_executable(ex03 ex_03.c)
add_executable(ex06 ex_06.c)
add_executable(ex08 ex_08.c)
add_executable(ex09 ex_09.c)
add_executable(ex05 ex_05.c)
add_executable(ex07 ex_07.c)
add_executable(ex04 ex_04.c)

